# program_mac

./: .gitignore  .gitignore.swp  mymrx.drawio
c/: const  readme.txt  sigalrm  sigalrm.c  sigint  sigint.c  sizeof  sizeof.c  socklib.h  tanimate  tanimate.c  tbounce1d  tbounce1d.c  test  test.c  thread.cpp.org  twebserv  twebserv.c
c/const.dSYM/Contents/Resources/DWARF/: const
c/thread/: mutex1  mutex1.c  pthread1  pthread1.c
cpp/: const  const.cpp  main  main.cpp  pointer  pointer.cpp  readme.txt  stack  stack.cpp  thread_test  thread_test.cpp  vector_test  vector_test.cpp
cpp/global_data/: lib.cpp  lib.h  main.cpp  readme.txt
cpp/logging/: log.cpp  log.h  log.txt  main.cpp  mytime.cpp  mytime.h  tool.cpp  tool.h
cpp/static_dynamic_lib/: build.sh  main.cpp  main_dynamic  main_static  readme.txt
cpp/static_dynamic_lib/lib/: cat.cpp  cat.h
docker/django_postgres_practice/: docker-compose.yml  manage.py  readme.txt
docker/django_postgres_practice/composeexample/: settings.py  urls.py
docker/django_postgres_practice/polls/: admin.py  models.py  tests.py  urls.py  views.py  views.py.old
docker/django_postgres_practice/polls/migrations/: 0001_initial.py
docker/django_postgres_practice/polls/static/polls/: style.css
docker/django_postgres_practice/polls/templates/polls/: detail.html  index.html  results.html
docker/django_postgres_practice/postgres/data/: postmaster.pid
docker/django_postgres_practice/postgres/data/base/1/: 2619
docker/django_postgres_practice/postgres/data/base/5/: 1247  1249  1249_fsm  1259  1259_fsm  16389  16390  16394  16396  16397  16401  16403  16404  16408  16476  16477  16478  16479  16485  16497  16498  16499  16504  2224  24576  24577  24582  24583  24585  24586  24590  24592  24594  24595  24599  24601  24608  24610  24615  24617  (+67 more)
docker/django_postgres_practice/postgres/data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
docker/django_postgres_practice/postgres/data/pg_xact/: 0000
docker/django_postgres_practice/sql/: recept_detail.sql
docker/django_postgres_practice/templates/admin/: base_site.html
docker/django_practice_old/: docker-compose.yml
project/command_battle/: 教材1.txt
project/dragon-quest-js/backup/command_battle/src/: game.js  index.html  lib.js  style.css
project/dragon-quest-js/backup/command_battle_org/src/: index.html  lib.js  style.css
python/transitions/: transitions_example.py
python/tutorial/: helloworld.py
sdl/stripe_animation/: q
sdl/stripe_animation/hiyoko/: gamemain.cpp  gamemain.hpp  main  main.cpp
sdl/stripe_animation2/: 14_animated_sprites_and_vsync.ll
sdl/tutorial/: 01_hello_sdl.cpp  02_getting_an_image_on_the_screen.cpp  03_event_driven_programming.cpp  04_key_presses.cpp  05_optimized_surface_loading_and_soft_stretching.cpp  06_extension_libraries_and_loading_other_image_formats.cpp  07_texture_loading_and_rendering.cpp  09_the_viewport.cpp  10_color_keying.cpp  11_clip_rendering_and_sprite_sheets.cpp  12_color_modulation.cpp  13_alpha_blending.cpp  14_animated_sprites_and_vsync.cpp  15_rotation_and_flipping.cpp  16_true_type_fonts.cpp  17_mouse_events.cpp  18_key_states.cpp  19_gamepads_and_joysticks.cpp  20_force_feedback.cpp  21_sound_effects_and_music.cpp  22_timing.cpp  23_advanced_timers.cpp  24_calculating_frame_rate.cpp  25_capping_frame_rate.cpp  26_motion.cpp  27_collision_detection.cpp  28_per-pixel_collision_detection.cpp  29_circular_collision_detection.cpp  30_scrolling.cpp  31_scrolling_backgrounds.cpp  32_text_input_and_clipboard_handling.cpp  33_file_reading_and_writing.cpp  34_audio_recording.cpp  35_window_events.cpp  36_multiple_windows.cpp  37_multiple_displays.cpp  38_particle_engines.cpp  39_tiling.cpp  40_texture_manipulation.cpp  41_bitmap_fonts.cpp  (+15 more)
sdl/tutorial/data/34/: readme.txt
sdl/tutorial/exe/: 01_hello_sdl  02_getting_an_image_on_the_screen  03_event_driven_programming  04_key_presses  05_optimized_surface_loading_and_soft_stretching  06_extension_libraries_and_loading_other_image_formats  07_texture_loading_and_rendering  08_geometry_rendering  09_the_viewport  10_color_keying  11_clip_rendering_and_sprite_sheets  12_color_modulation  13_alpha_blending  14_animated_sprites_and_vsync  15_rotation_and_flipping  16_true_type_fonts  17_mouse_events  18_key_states  19_gamepads_and_joysticks  20_force_feedback  21_sound_effects_and_music  22_timing  23_advanced_timers  24_calculating_frame_rate  25_capping_frame_rate  26_motion  27_collision_detection  28_per-pixel_collision_detection  29_circular_collision_detection  30_scrolling  31_scrolling_backgrounds  32_text_input_and_clipboard_handling  33_file_reading_and_writing  34_audio_recording  35_window_events  36_multiple_windows  37_multiple_displays  38_particle_engines  39_tiling  40_texture_manipulation  (+9 more)
sdl/tutorial/tmp/: 08_geometry_rendering  10_color_keying  10_color_keying_2  11_clip_rendering_and_sprite_sheets
tcltk/: hello.cpp
web/: async.html  async_await.html  promise.html  webstrage.html
